pricelist-bare/pricelist-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: pricelist
    tier: frontend
  name: pricelist-route
  namespace: pricelist
  annotations:
    argocd.argoproj.io/sync-wave: "8"
spec:
  host: "pricelist-route-pricelista.apps.ip01.dap.local"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: pricelist
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
